🐛 修正部份錯誤
