# docs/swagger.json
@@ -9,7 +9,7 @@
             "email": "zor@cqiserv.com"
         },
         "license": {},
-        "version": "2020.1.08.1.1.3.1.a"
+        "version": "2020.07"
     },
     "paths": {
         "/admin/register": {
@@ -101,43 +101,6 @@
                 "responses": {
                     "200": {
                         "description": "{\"code\":\"200\",\"message\":\"\",\"name\":\"\",\"num\":\"\",\"status\":\"SUCCESS\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/list": {
-            "post": {
-                "consumes": [
-                    "application/x-www-form-urlencoded"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "ListServer",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "cqikey",
-                        "name": "cqikey",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{\"status\":\"SUCCESS\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "{\"status\":\"FAIL\"}",
                         "schema": {
                             "type": "string"
                         }
