# routers/api/admin/register.go
@@ -4,15 +4,14 @@ import (
 	"cash-server/model"
 	"cash-server/pkg/encryption"
 	"cash-server/pkg/util"
-	"log"
 	"net/http"
 	"strings"
 
 	"github.com/gin-gonic/gin"
 )
 
-// UserRegisterServer  application/x-www-form-url
-// @Summary UserRegisterServer
+// PlatformRegisterServer  application/x-www-form-url
+// @Summary PlatformRegisterServer
 // @Tags Admin
 // @Produce  json
 // @Accept  application/x-www-form-urlencoded
@@ -23,26 +22,28 @@ import (
 // @success 400 {string} string "{"status":"FAIL"}"
 // @success 411 {string} string "{"status":"FAIL"}"
 // @Router /admin/register [post]
-func UserRegisterServer(c *gin.Context) {
+func PlatformRegisterServer(c *gin.Context) {
 	account := c.PostForm("account")
 	pw := c.PostForm("password")
 	name := c.PostForm("name")
+	email := c.PostForm("email")
+	groupid := c.PostForm("groupid")
 	if account != "" && pw != "" && name != "" {
 		tokenSecret := encryption.Rand16()
 		token := encryption.PswEncrypt(account, tokenSecret)
 		time := util.GETNowsqltime()
-		log.Println("註冊->", account)
-		err := model.UserRegister(account, pw, name, token, tokenSecret, time)
+		util.Info("註冊 PlatformRegisterServer ->", account)
+		err := model.PlatformRegister(account, pw, name, groupid, email, token, tokenSecret, time)
 		if err != nil {
-			if strings.Contains(err.Error(), "payment_user.user_account_UNIQUE") {
+			if strings.Contains(err.Error(), "payment_platform.platform_account_UNIQUE") {
 				c.JSON(411, gin.H{
 					"status": "fail",
 					"msg":    "Account 重複",
 				})
 			} else {
 				c.JSON(411, gin.H{
-					"status": "fail",
-					"err":    err,
+					"status": "error",
+					"msg":    err,
 				})
 			}
 		} else {
@@ -57,28 +58,7 @@ func UserRegisterServer(c *gin.Context) {
 	} else {
 		c.JSON(400, gin.H{
 			"status": "error",
-		})
-	}
-}
-
-// ListServer application/json  application/x-www-form-urlencoded
-// @Summary ListServer
-// @Tags Admin
-// @Produce  json
-// @Accept  application/x-www-form-urlencoded
-// @Param cqikey formData string true "cqikey"
-// @success 200 {string} string "{"status":"SUCCESS"}"
-// @success 400 {string} string "{"status":"FAIL"}"
-// @Router /list [post]
-func ListServer(c *gin.Context) {
-	cqikey := c.PostForm("cqikey")
-	if cqikey == "cqig7777" {
-		c.JSON(http.StatusOK, gin.H{
-			"status": "SUCCESS",
-		})
-	} else {
-		c.JSON(400, gin.H{
-			"status": "FAIL",
+			"msg":    "error",
 		})
 	}
 }
